--- a/tiklab-hadess-api/pom.xml
+++ b/tiklab-hadess-api/pom.xml
@@ -51,6 +51,14 @@
             <version>${tiklab-postin.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
