--- a/tiklab-hadess-starter/src/main/resources/config/dev/application.yaml
+++ b/tiklab-hadess-starter/src/main/resources/config/dev/application.yaml
@@ -18,8 +18,8 @@ server:
 jdbc:
   driverClassName: org.postgresql.Driver
   #url: jdbc:postgresql://172.10.1.10:5432/thoughtware_hadess?currentSchema=public&stringtype=unspecified
-  #url: jdbc:postgresql://172.10.1.10:5432/tiklab_xpack?currentSchema=public&stringtype=unspecified
   #url: jdbc:postgresql://172.11.1.10:5432/tiklab_xpack?currentSchema=public&stringtype=unspecified
+  #url: jdbc:postgresql://172.16.0.33:5483/hadess_public?currentSchema=public&stringtype=unspecified
   url: jdbc:postgresql://172.13.1.24:5432/xpack_ee?currentSchema=public&stringtype=unspecified
   username: postgres
   password: darth2020
