--- a/tiklab-hadess-starter/src/main/resources/config/dev/application.yaml
+++ b/tiklab-hadess-starter/src/main/resources/config/dev/application.yaml
@@ -11,16 +11,20 @@ spring:
 #web config
 server:
   port: 8080
+  tomcat:
+    max-threads: 200       # 最大线程数
+    max-connections: 10000 # 最大连接数
+    accept-count: 100      # 等待队列长度
 
 #dal config
 
 #dal config for mysql jdbc
 jdbc:
   driverClassName: org.postgresql.Driver
-  #url: jdbc:postgresql://172.10.1.10:5432/thoughtware_hadess?currentSchema=public&stringtype=unspecified
+  url: jdbc:postgresql://172.10.1.10:5432/thoughtware_hadess?currentSchema=public&stringtype=unspecified
   #url: jdbc:postgresql://172.11.1.10:5432/tiklab_xpack?currentSchema=public&stringtype=unspecified
   #url: jdbc:postgresql://172.16.0.33:5483/hadess_public?currentSchema=public&stringtype=unspecified
-  url: jdbc:postgresql://172.13.1.24:5432/xpack_ee?currentSchema=public&stringtype=unspecified
+  #url: jdbc:postgresql://172.13.1.24:5432/xpack_ee?currentSchema=public&stringtype=unspecified
   username: postgres
   password: darth2020
 
@@ -118,3 +122,4 @@ openscan_mvn:
 
 visible:
   address: ""
+
