代码提交修改

--- a/tiklab-hadess-starter/src/main/resources/config/demo/application.yaml
+++ b/tiklab-hadess-starter/src/main/resources/config/demo/application.yaml
@@ -74,7 +74,7 @@ visible:
 
 backups:
   time: 0 0 2 * * ?
-  dir: /data/backup
+  dir:  ${DATA_HOME}/backups
   xpack:
     dir: ${DATA_HOME}/repository
 
