--- a/tiklab-hadess-starter/src/main/resources/config/pub/application.yaml
+++ b/tiklab-hadess-starter/src/main/resources/config/pub/application.yaml
@@ -68,7 +68,7 @@ licences:
 
 backups:
   time: 0 0 2 * * ?
-  dir: /data
+  dir:  ${DATA_HOME}/backups
   xpack:
     dir: ${DATA_HOME}/repository
 
