--- a/tiklab-hadess-starter/src/main/resources/config/test/application.yaml
+++ b/tiklab-hadess-starter/src/main/resources/config/test/application.yaml
@@ -66,7 +66,7 @@ visible:
 
 backups:
   time: 0 0 2 * * ?
-  dir: /data
+  dir:  ${DATA_HOME}/backups
   xpack:
     dir: ${DATA_HOME}/repository
 
