--- a/tiklab-hadess-starter/src/main/resources/config/dev/application.yaml
+++ b/tiklab-hadess-starter/src/main/resources/config/dev/application.yaml
@@ -21,12 +21,12 @@ DATA_HOME: ${user.home}/tiklab/thoughtware-hadess
 
 #dal config for mysql jdbc
 jdbc:
-  #driverClassName: org.postgresql.Driver
-  #url: jdbc:postgresql://172.10.1.10:5432/thoughtware_hadess?currentSchema=public&stringtype=unspecified
-  #username: postgres
-  driverClassName: com.mysql.cj.jdbc.Driver
-  url: jdbc:mysql://172.10.1.10:3306/tiklab_hadess?characterEncoding=utf8&useSSL=false
-  username: root
+  driverClassName: org.postgresql.Driver
+  url: jdbc:postgresql://172.10.1.10:5432/tiklab_xpack?currentSchema=public&stringtype=unspecified
+  username: postgres
+  #driverClassName: com.mysql.cj.jdbc.Driver
+  #url: jdbc:mysql://172.10.1.10:3306/tiklab_hadess?characterEncoding=utf8&useSSL=false
+  #username: root
   password: darth2020
 
 
