--- a/tiklab-hadess-starter/src/main/resources/config/prd/application.yaml
+++ b/tiklab-hadess-starter/src/main/resources/config/prd/application.yaml
@@ -3,9 +3,6 @@ app:
   name: tiklab-hadess
 
 
-spring:
-  profiles:
-    active: prd
 
 server:
   port: 8080
@@ -50,41 +47,21 @@ dcs:
     database: dcs1
     expire: 7200
 
-#eas config
-soular:
-  embbed:
-    enable: false
-  address: http://e.tiklab.net
 
-message:
-  sms:
-    enabled: true
+#  (local:本地登录  soular:统一登录)
+auth:
+  type: soular
+  soular:
+    address: http://e.tiklab.net
 
-base:
-  url: http://e.hadess.tiklab.net
+external:
+  url: http://e.tiklab.net
 
 repository:
   address: ${DATA_HOME}/repository
 
-#licences config
-licences:
-  path: ${DATA_HOME}/licences
 
-backups:
-  time: 0 0 2 * * ?
-  dir:  ${DATA_HOME}/backups
-  xpack:
-    dir: ${DATA_HOME}/repository
-
-
-openscan_mvn:
-  repo: http://172.13.1.24:8080/repository/maven-public
-  user: admin
-  password: 123456
 
 visible:
   address: http://e.hadess.tiklab.net
 
-postin:
-  scan:
-    package: io.tiklab.hadess
